<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.CurrencyConverter.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.CurrencyConverter.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/us" />

        <TextView
            android:id="@+id/ex_us1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/us_plug"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1 USD" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/swap_currency_btn_desc"
            android:src="@drawable/ic_baseline_swap_horiz_24" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/rus" />

        <TextView
            android:id="@+id/usd_rub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/rub_plug"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1 RUB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/us" />

        <TextView
            android:id="@+id/ex_us2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/us_plug"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1 USD" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/swap_currency_btn_desc"
            android:src="@drawable/ic_baseline_swap_horiz_24" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/euro" />

        <TextView
            android:id="@+id/usd_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/euro_plug"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1 EUR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/euro" />

        <TextView
            android:id="@+id/ex_eur3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/euro_plug"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1 EUR" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/swap_currency_btn_desc"
            android:src="@drawable/ic_baseline_swap_horiz_24" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/rus" />

        <TextView
            android:id="@+id/eur_rub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/rub_plug"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="1 RUB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bank_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:text="@string/appwidget_text_btn" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_baseline_sync_24" />
    </LinearLayout>

</LinearLayout>